fix main layout issue

--- a/src/app/components/main-layout/mainLayout.module.scss
+++ b/src/app/components/main-layout/mainLayout.module.scss
@@ -15,7 +15,7 @@
 }
 
 .container {
-  max-width: 70%;
+  max-width: functions.rem(1440);
   margin: 0 auto;
 }
 
