--- a/src/features/main/index.module.scss
+++ b/src/features/main/index.module.scss
@@ -93,10 +93,6 @@
         grid-template-columns: repeat(2, 1fr);
       }
 
-      @media screen and (max-width: 576px) {
-        grid-template-columns: repeat(1, 1fr);
-      }
-
       .post {
         box-sizing: border-box;
         // width: functions.rem(290);
@@ -147,10 +143,6 @@
 
       @media screen and (max-width: 900px) {
         grid-template-columns: repeat(2, 1fr);
-      }
-
-      @media screen and (max-width: 576px) {
-        grid-template-columns: repeat(1, 1fr);
       }
 
       .work {
