--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -311,7 +311,6 @@ h6 {
 
   &-primary {
     font-weight: 600;
-    background-color: var(--primary-500);
     border-top: functions.rem(1) solid rgba(255, 255, 255, 3%);
     border-inline: none;
     box-shadow: functions.rem(0) functions.rem(0) functions.rem(0)
